--- a/JogoJS.html
+++ b/JogoJS.html
@@ -17,6 +17,13 @@
 	<body>
 		<script>
 			var canvas, ctx, ALTURA, LARGURA, frames = 0, maxPulos =3, velocidade = 6,
+			estadoAtual, 
+
+			estados = {
+				jogar: 0,
+				jogando: 1,
+				perdeu: 2
+			},
 
 			chao = {
 				y: 550,
@@ -109,7 +116,15 @@
 			};
 
 			function clique(event){
-				bloco.pula();
+				if(estadoAtual == estados.jogando)
+					bloco.pula();
+
+				else if(estadoAtual == estados.jogar)
+					estadoAtual = estados.jogando;
+
+				else if(estadoAtual == estados.perdeu)
+					estadoAtual = estados.jogar;
+
 			}
 			
 			function roda(){
@@ -123,15 +138,29 @@
 				frames++;
 
 				bloco.atualiza();
-				obstaculos.atualiza();
+
+				if(estadoAtual == estados.jogando)
+					obstaculos.atualiza();
 			}
 			
 			function desenha(){
 				ctx.fillStyle = "#80daff";
 				ctx.fillRect(0,0, LARGURA, ALTURA);
 
+				if(estadoAtual == estados.jogar){
+					ctx.fillStyle = "green";
+					ctx.fillRect(LARGURA / 2 - 50, ALTURA / 2 - 50, 100, 100);
+				}
+
+				else if(estadoAtual == estados.perdeu){
+					ctx.fillStyle = "red";
+					ctx.fillRect(LARGURA / 2 - 50, ALTURA / 2 - 50, 100, 100);
+				}
+
+				else if(estadoAtual == estados.jogando)
+					obstaculos.desenha();
+
 				chao.desenha();
-				obstaculos.desenha();
 				bloco.desenha();
 			}
 			
@@ -152,6 +181,8 @@
 				ctx = canvas.getContext("2d"); 
 				document.body.appendChild(canvas);
 				document.addEventListener("mousedown", clique);
+
+				estadoAtual = estados.jogar;
 
 				roda();
 			}
