--- a/JogoJS.html
+++ b/JogoJS.html
@@ -51,9 +51,10 @@
 					this.velocidade += this.gravidade;
 					this.y += this.velocidade;
 
-					if(this.y > chao.y - this.altura){
+					if(this.y > chao.y - this.altura && estadoAtual != estados.perdeu){
 						this.y = chao.y - this.altura;
 						this.qntPulos = 0;
+						this.velocidade = 0;
 					}
 				},
 
@@ -98,12 +99,21 @@
 
 						obs.x -= velocidade;
 
-						if(obs.x <= -obs.largura){
+						if(bloco.x < obs.x + obs.largura && bloco.x + bloco.largura >= 
+							obs.x && bloco.y + bloco.altura >= chao.y - obs.altura){
+							estadoAtual = estados.perdeu;
+						}
+
+						else if(obs.x <= -obs.largura){
 							this._obs.splice(i, 1);
 							tam--;
 							i--;
 						}
 					}
+				},
+
+				limpa : function(){
+					this._obs = [];
 				},
 
 				desenha: function(){
@@ -122,8 +132,11 @@
 				else if(estadoAtual == estados.jogar)
 					estadoAtual = estados.jogando;
 
-				else if(estadoAtual == estados.perdeu)
+				else if(estadoAtual == estados.perdeu && bloco.y >= 2*ALTURA){
 					estadoAtual = estados.jogar;
+					bloco.velocidade = 0;
+					bloco.y = 0;
+				}
 
 			}
 			
@@ -141,6 +154,9 @@
 
 				if(estadoAtual == estados.jogando)
 					obstaculos.atualiza();
+
+				else if(estadoAtual == estados.perdeu)
+					obstaculos.limpa();
 			}
 			
 			function desenha(){
