--- a/JogoJS.html
+++ b/JogoJS.html
@@ -46,6 +46,7 @@
 				velocidade: 0,
 				forcaDoPulo: 23.6,
 				qntPulos: 0,
+				score: 0,
 
 				atualiza: function(){
 					this.velocidade += this.gravidade;
@@ -65,6 +66,12 @@
 					}	
 				},
 
+				reset: function(){
+					this.velocidade = 0;
+					this.y = 0;
+					this.score = 0;
+				},
+
 				desenha: function(){
 					ctx.fillStyle = this.cor;
 					ctx.fillRect(this.x, this.y, this.largura, this.altura);
@@ -80,7 +87,8 @@
 				insere: function(){
 					this._obs.push({
 						x: LARGURA,
-						largura: 30 + Math.floor(21 * Math.random()),
+						//largura: 30 + Math.floor(21 * Math.random()),
+						largura: 50,
 						altura: 30 + Math.floor(120* Math.random()),
 						cor: this.cores[Math.floor(5*Math.random())]
 					});
@@ -100,9 +108,11 @@
 						obs.x -= velocidade;
 
 						if(bloco.x < obs.x + obs.largura && bloco.x + bloco.largura >= 
-							obs.x && bloco.y + bloco.altura >= chao.y - obs.altura){
+							obs.x && bloco.y + bloco.altura >= chao.y - obs.altura)
 							estadoAtual = estados.perdeu;
-						}
+						
+						else if(obs.x == 0)
+							bloco.score++;
 
 						else if(obs.x <= -obs.largura){
 							this._obs.splice(i, 1);
@@ -134,8 +144,8 @@
 
 				else if(estadoAtual == estados.perdeu && bloco.y >= 2*ALTURA){
 					estadoAtual = estados.jogar;
-					bloco.velocidade = 0;
-					bloco.y = 0;
+					obstaculos.limpa();
+					bloco.reset();
 				}
 
 			}
@@ -154,14 +164,15 @@
 
 				if(estadoAtual == estados.jogando)
 					obstaculos.atualiza();
-
-				else if(estadoAtual == estados.perdeu)
-					obstaculos.limpa();
 			}
 			
 			function desenha(){
 				ctx.fillStyle = "#80daff";
 				ctx.fillRect(0,0, LARGURA, ALTURA);
+
+				ctx.fillStyle = "#fff";
+				ctx.font = "50px Arial";
+				ctx.fillText(bloco.score, 30 , 68);
 
 				if(estadoAtual == estados.jogar){
 					ctx.fillStyle = "green";
@@ -171,6 +182,21 @@
 				else if(estadoAtual == estados.perdeu){
 					ctx.fillStyle = "red";
 					ctx.fillRect(LARGURA / 2 - 50, ALTURA / 2 - 50, 100, 100);
+
+					ctx.save();
+					ctx.translate(LARGURA/2, ALTURA/2);
+					ctx.fillStyle = "#fff";
+
+					if(bloco.score <10)
+						ctx.fillText(bloco.score, -13, 19);
+					
+					else if(bloco.score >= 10 && bloco.score <100)
+						ctx.fillText(bloco.score, -26, 19);
+
+					else
+						ctx.fillText(bloco.score, -39, 19);
+
+					ctx.restore();
 				}
 
 				else if(estadoAtual == estados.jogando)
